--- a/index.html
+++ b/index.html
@@ -3,56 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Registration | Glass UI</title>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <title>TechFlow | Login</title>
     <link rel="stylesheet" href="assists/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
-    <div class="bg-wrapper">
-        <div class="blob blob-1"></div>
-        <div class="blob blob-2"></div>
-    </div>
+    <nav class="navbar">
+        <div class="logo">TECH<span>FLOW</span></div>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#support">Support</a></li>
+        </ul>
+    </nav>
 
-    <div class="form-container">
-        <div id="form-ui">
-            <header>
-                <h1>Join the Lab</h1>
-                <p>Enter your credentials to create an account.</p>
-            </header>
-
-            <form id="regForm">
-                <div class="input-group">
-                    <label for="name">Full Name</label>
-                    <input type="text" id="name" placeholder="Enter your name" required>
-                </div>
-
-                <div class="input-group">
-                    <label for="email">Email Address</label>
-                    <input type="email" id="email" placeholder="email@example.com" required>
-                </div>
-
-                <div class="input-group">
-                    <label for="phone">Phone Number</label>
-                    <input type="tel" id="phone" placeholder="+1 (555) 000-0000" required>
-                </div>
-
-                <div class="input-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" placeholder="••••••••" required>
-                </div>
-
-                <button type="submit" id="submitBtn">Sign Up</button>
+    <main class="login-container">
+        <div class="login-box">
+            <h2>Login</h2>
+            <form id="loginForm">
+                <input type="email" id="email" placeholder="Email Address" required>
+                <input type="password" id="password" placeholder="Password" required>
+                <button type="submit" class="login-btn">Sign In</button>
             </form>
         </div>
+    </main>
 
-        <div id="success-ui" class="hidden">
-            <div class="icon-circle">✓</div>
-            <h2>Account Created!</h2>
-            <p>Welcome to the community. Redirecting you shortly...</p>
-            <button onclick="window.location.reload()" class="btn-secondary">Back to Start</button>
+    <footer class="footer">
+        <div class="footer-grid">
+            <div class="footer-col">
+                <div class="footer-logo">TECH<span>FLOW</span></div>
+                <p>Innovative digital solutions.</p>
+            </div>
+
+            <div class="footer-col">
+                <h4>Get the App</h4>
+                <div class="app-icons">
+                    <a href="#"><i class="fab fa-apple"></i></a>
+                    <a href="#"><i class="fab fa-google-play"></i></a>
+                </div>
+            </div>
+
+            <div class="footer-col">
+                <h4>Follow Us</h4>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+
+            <div class="footer-col">
+                <h4>Newsletter</h4>
+                <div class="sub-form">
+                    <input type="email" id="subEmail" placeholder="Enter Email">
+                    <button id="subBtn">Subscribe</button>
+                </div>
+            </div>
         </div>
-    </div>
+        <div class="footer-bottom">
+            &copy; 2026 TechFlow. All rights reserved.
+        </div>
+    </footer>
 
     <script src="assists/js/script.js"></script>
 </body>
