--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechFlow | Login</title>
+    <title>TechFlow | Modern Portal</title>
     <link rel="stylesheet" href="assists/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+
+    <div class="glow glow-1"></div>
+    <div class="glow glow-2"></div>
 
     <nav class="navbar">
         <div class="logo">TECH<span>FLOW</span></div>
@@ -15,37 +18,72 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#support">Support</a></li>
+            <li><button id="theme-toggle" class="theme-btn"><i class="fas fa-moon"></i></button></li>
         </ul>
     </nav>
 
-    <main class="login-container">
-        <div class="login-box">
-            <h2>Login</h2>
-            <form id="loginForm">
-                <input type="email" id="email" placeholder="Email Address" required>
-                <input type="password" id="password" placeholder="Password" required>
-                <button type="submit" class="login-btn">Sign In</button>
-            </form>
-        </div>
+    <main class="container">
+        <section class="login-section">
+            <div class="glass-card login-box">
+                <h2>Welcome Back</h2>
+                <p class="subtitle">Access your digital workspace</p>
+                <form id="loginForm">
+                    <div class="input-field">
+                        <i class="fas fa-envelope"></i>
+                        <input type="email" placeholder="Email Address" required>
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="Password" required>
+                    </div>
+                    <button type="submit" class="new-btn">Sign In <i class="fas fa-arrow-right"></i></button>
+                </form>
+            </div>
+        </section>
+
+        <section class="info-section">
+            <h3 class="section-label">Info-sectient</h3>
+            <div class="info-grid">
+                <div class="glass-card info-card image-card">
+                    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=600&q=80" alt="Collaboration">
+                </div>
+                <div class="glass-card info-card text-card">
+                    <h4>Collaborate & Innovate</h4>
+                    <p>Our platform helps teams worldwide connect, share ideas, and build things together. Secure, efficient, and designed for success.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="design-section">
+            <div class="glass-card full-card">
+                <h3>02. Design & Development</h3>
+                <div class="ful-card">
+                <p class="desc">Our experts build high-fidelity prototypes and scalable codebases to bring ideas to reality.</p>
+                <div class="main-img-wrapper">
+                    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=600&q=80" alt="Design Team">
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
-        <div class="footer-grid">
-            <div class="footer-col">
-                <div class="footer-logo">TECH<span>FLOW</span></div>
-                <p>Innovative digital solutions.</p>
+        <div class="footer-content">
+            <div class="footer-brand">
+                <div class="footer-logo">TECHFLOW</div>
+                <p>Building the future, one pixel at a time.</p>
             </div>
-
-            <div class="footer-col">
+            
+            <div class="footer-group">
                 <h4>Get the App</h4>
-                <div class="app-icons">
+                <div class="app-links">
                     <a href="#"><i class="fab fa-apple"></i></a>
                     <a href="#"><i class="fab fa-google-play"></i></a>
                 </div>
             </div>
 
-            <div class="footer-col">
-                <h4>Follow Us</h4>
+            <div class="footer-group">
+                <h4>Socials</h4>
                 <div class="social-icons">
                     <a href="#"><i class="fab fa-instagram"></i></a>
                     <a href="#"><i class="fab fa-facebook"></i></a>
@@ -53,16 +91,13 @@
                 </div>
             </div>
 
-            <div class="footer-col">
+            <div class="footer-group">
                 <h4>Newsletter</h4>
                 <div class="sub-form">
-                    <input type="email" id="subEmail" placeholder="Enter Email">
-                    <button id="subBtn">Subscribe</button>
+                    <input type="email" placeholder="Your Email">
+                    <button class="join-btn">Join</button>
                 </div>
             </div>
-        </div>
-        <div class="footer-bottom">
-            &copy; 2026 TechFlow. All rights reserved.
         </div>
     </footer>
 
